<?xml version="1.0"?>
<package format="2">
  <name>move_dynamic_trajectory_adapter</name>
  <version>0.0.0</version>
  <description>The move_dynamic_trajectory_adapter package</description>

  <maintainer email="spencer@todo.todo">spencer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
