set(MOVE_DYNAMIC_LIB_NAME move_dynamic_interface)

add_library(${MOVE_DYNAMIC_LIB_NAME} src/move_dynamic_interface.cpp)
set_target_properties(${MOVE_DYNAMIC_LIB_NAME} PROPERTIES VERSION "${${PROJECT_NAME}_VERSION}")
target_link_libraries(${MOVE_DYNAMIC_LIB_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
add_dependencies(${MOVE_DYNAMIC_LIB_NAME} ${catkin_EXPORTED_TARGETS})

install(TARGETS ${MOVE_DYNAMIC_LIB_NAME}
        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
        RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION})

add_library(${MOVE_DYNAMIC_LIB_NAME}_python src/wrap_python_move_dynamic.cpp)
target_link_libraries(${MOVE_DYNAMIC_LIB_NAME}_python ${MOVE_DYNAMIC_LIB_NAME} eigenpy::eigenpy ${PYTHON_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES} move_dynamic_py_bindings_tools)
add_dependencies(${MOVE_DYNAMIC_LIB_NAME}_python ${catkin_EXPORTED_TARGETS})
set_target_properties(${MOVE_DYNAMIC_LIB_NAME}_python PROPERTIES VERSION "${${PROJECT_NAME}_VERSION}")
set_target_properties(${MOVE_DYNAMIC_LIB_NAME}_python PROPERTIES OUTPUT_NAME _move_dynamic_interface PREFIX "")
set_target_properties(${MOVE_DYNAMIC_LIB_NAME}_python PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_PYTHON_DESTINATION}")

install(TARGETS ${MOVE_DYNAMIC_LIB_NAME}_python
        ARCHIVE DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION}
        LIBRARY DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION}
        RUNTIME DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION})

install(DIRECTORY include DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION})
