set(MOVE_DYNAMIC_LIB_NAME move_dynamic_py_bindings_tools)

add_library(${MOVE_DYNAMIC_LIB_NAME} src/roscpp_initializer.cpp)
set_target_properties(${MOVE_DYNAMIC_LIB_NAME} PROPERTIES VERSION "${${PROJECT_NAME}_VERSION}")
target_link_libraries(${MOVE_DYNAMIC_LIB_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})

install(TARGETS ${MOVE_DYNAMIC_LIB_NAME}
        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
        RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION})

add_library(${MOVE_DYNAMIC_LIB_NAME}_python src/wrap_python_roscpp_initializer.cpp)
target_link_libraries(${MOVE_DYNAMIC_LIB_NAME}_python ${MOVE_DYNAMIC_LIB_NAME} ${PYTHON_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
set_target_properties(${MOVE_DYNAMIC_LIB_NAME}_python PROPERTIES VERSION "${${PROJECT_NAME}_VERSION}")
set_target_properties(${MOVE_DYNAMIC_LIB_NAME}_python PROPERTIES OUTPUT_NAME _move_dynamic_roscpp_initializer PREFIX "")
set_target_properties(${MOVE_DYNAMIC_LIB_NAME}_python PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_PYTHON_DESTINATION}")
if(WIN32)
    set_target_properties(${MOVE_DYNAMIC_LIB_NAME}_python PROPERTIES SUFFIX .pyd)
endif(WIN32)

install(TARGETS ${MOVE_DYNAMIC_LIB_NAME}_python
        DESTINATION ${CATKIN_PACKAGE_PYTHON_DESTINATION})

install(DIRECTORY include/ DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION})
