<?xml version="1.0"?>
<package format="2">
  <name>file_operation_tools</name>
  <version>0.0.0</version>
  <description>The file_operation_tools package</description>

  <maintainer email="spencer@todo.todo">spencer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
